--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="shortcut icon" href="./src/image/favicon-32x32.png" type="image/x-icon">
-<link rel="stylesheet" href="./src/css/reset.css">
-<link rel="stylesheet" href="./src/css/variables.css">
-<link rel="stylesheet" href="./src/css/style.css">
-<link rel="stylesheet" href="./src/css/responsive.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+        integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="shortcut icon" href="./src/image/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/variables.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
     <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 </head>
-<body>
-    <main class="container">    
-        <div class="column-1">
-            <div class="logo"><img src="./src/image/logo.png" alt="Logo" title="Huddle"></div> 
-                <div class="div-img">
-                    <img  src="src/image/illustration-mockups.png" alt="Illustration Mockups" class="illustration-mockups"></div>
-        </div>
 
+<body>
+    <main class="container">
+        <div class="column-1">
+            <div class="logo"><img class="logo-img" src="./src/image/logo.png" alt="Logo" title="Huddle"></div>
+            <div class="div-img">
+                <img src="src/image/illustration-mockups.png" alt="Illustration Mockups" class="illustration-mockups">
+            </div>
+        </div>
         <div class="column-2">
             <div class="about">
                 <h1>Build The Community Your Fans Will Love</h1>
-                <p>  Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+                <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
                     Create connections with your users as you engage in genuine discussion.</p>
-            </div>            
-                <div class="button"><a href="/">Register</a></div>
-           </div>        
+            </div>
+            <div class="button"><a href="/">Register</a></div>
+        </div>
         <div class="social">
             <nav>
                 <a href="/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="/" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="/" target="_blank"><i class="fab fa-instagram"></i></a>
-                </nav>
+            </nav>
         </div>
-        </main>
+    </main>
 </body>
+
 </html>
